--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
         "fb_url" : "https://www.facebook.com/shyanukant",
         "insta_url" : "https://www.instagram.com/shyanukant",
         "tw_url" : "https://www.twitter.com/shyanukant",
+        "gmail-user" : "rathishyanukant@gmail.com",
         "lind_url" : "https://www.linkedin.com/in/shyanukant/",
         "git_url" : "https://www.github.com/Shyanukant",
         
