add link table in db

--- a/config.json
+++ b/config.json
@@ -6,9 +6,10 @@
         "fb_url" : "https://www.facebook.com/shyanukant",
         "insta_url" : "https://www.instagram.com/shyanukant",
         "tw_url" : "https://www.twitter.com/shyanukant",
-        "gmail-user" : "rathishyanukant@gmail.com",
+        
         "lind_url" : "https://www.linkedin.com/in/shyanukant/",
         "git_url" : "https://www.github.com/Shyanukant",
+        "yt_url" : "https://www.youtube.com/@shyanukant",
         
         "no-of-project" : 10,
         "login_image" : "login.png"
