--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
         
         "lind_url" : "https://www.linkedin.com/in/shyanukant/",
         "git_url" : "https://www.github.com/Shyanukant",
+        "gmail-url" : "rathishyanukant@gmail.com",
         "yt_url" : "https://www.youtube.com/@shyanukant",
         
         "no-of-project" : 10,
