--- a/config.json
+++ b/config.json
@@ -12,6 +12,8 @@
         "gmail-url" : "rathishyanukant@gmail.com",
         "yt_url" : "https://www.youtube.com/@shyanukant",
         
+        "certificates" : ["MachineLearning.png","analyticsVisualization.png","devloperExpereince.png","JavaScriptCertificate.png","BuildPersonalBrandCertificate.png","whiteboardAnimation.jpg","gooleCertificate.png"],
+
         "no-of-project" : 10,
         "login_image" : "login.png"
     }
