--- a/config.json
+++ b/config.json
@@ -11,6 +11,8 @@
         "git_url" : "https://www.github.com/Shyanukant",
         "gmail-url" : "rathishyanukant@gmail.com",
         "yt_url" : "https://www.youtube.com/@shyanukant",
+        "opensea" : "https://opensea.io/shyanukant",
+        "kudos":"https://mintkudos.xyz/profile/shyanukant?tab=Received",
         
         "certificates" : ["MachineLearning.png","analyticsVisualization.png","devloperExpereince.png","JavaScriptCertificate.png","BuildPersonalBrandCertificate.png","whiteboardAnimation.jpg","gooleCertificate.png"],
 
