--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
         "web_name" : "Shyanukant",
         "name" : "Shyanukant Rathi",
         "tag" : "CS Enthusiastic",
-        "profile" : "I am a Beginner Developer. Designer and also know about Machine Learning and data science. And I am Learning Web3.0 from Alchemy which is a open-source Web3.0 community",
+        "profile" : "A Developer. Designer and also know about Machine Learning and data science. And I am Learning Web3.0 from Alchemy which is a open-source Web3.0 community",
         "fb_url" : "https://www.facebook.com/shyanukant",
         "insta_url" : "https://www.instagram.com/shyanukant",
         "tw_url" : "https://www.twitter.com/shyanukant",
