--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,67 +1,3 @@
-# # Your workflow name.
-# name: Deploy to heroku.
-
-# # Run workflow on every push to main branch.
-# on:
-#   push:
-#     branches: [master]
-
-# # Your workflows jobs.
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       # Check-out your repository.
-#       - name: Checkout
-#         uses: actions/checkout@v2
-
-
-# ### ⬇ IMPORTANT PART ⬇ ###
-
-#       - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
-#         uses: johnnybenson/heroku-docker-deploy@v1.5.1 # GitHub action name (leave it as it is).
-#         with:
-#           # Below you must provide variables for your Heroku app.
-
-#           # The email address associated with your Heroku account.
-#           # If you don't want to use repository secrets (which is recommended) you can do:
-#           email: ${{ secrets.HEROKU_EMAIL }}
-          
-#           # Heroku API key associated with provided user's email.
-#           # Api Key is available under your Heroku account settings.
-#           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          
-#           # Name of the heroku application to which the build is to be sent.
-#           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-
-#           # (Optional, default: "./")
-#           # Dockerfile directory.
-#           # For example, if you have a Dockerfile in the root of your project, leave it as follows:
-#           dockerfile_directory: ./
-
-#           # (Optional, default: "Dockerfile")
-#           # Dockerfile name.
-#           dockerfile_name: Dockerfile
-
-#           # (Optional, default: "")
-#           # Additional options of docker build command.
-#           docker_options: "--no-cache"
-
-#           # (Optional, default: "web")
-#           # Select the process type for which you want the docker container to be uploaded.
-#           # By default, this argument is set to "web".
-#           # For more information look at https://devcenter.heroku.com/articles/process-model
-#           process_type: web
-          
-          
-          
-          
-   
-          
-### ⬆ IMPORTANT PART ⬆ ###
-
-
-
 name: deploy
 
 on:
@@ -75,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
@@ -88,12 +24,12 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.HEROKU_APP_NAME }} .
           docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.HEROKU_APP_NAME }}
 
-      - name: Deploy to Heroku
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
-        run: |
-          heroku container:login
-          heroku container:push web -a $HEROKU_APP_NAME
-          heroku container:release web -a $HEROKU_APP_NAME
+      # - name: Deploy to Heroku
+      #   env:
+      #     HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      #     HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+      #   run: |
+      #     heroku container:login
+      #     heroku container:push web -a $HEROKU_APP_NAME
+      #     heroku container:release web -a $HEROKU_APP_NAME
 
